Rose Bowl update

--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,80 +364,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2018-01-01 18:08:45</em></div>
-<div class="line"><em>Last bowl scored:  Citrus Bowl (Lousiana State (LSU) vs. Notre Dame)</em></div>
+<div class="line"><em>Last updated:  2018-01-01 20:50:28</em></div>
+<div class="line"><em>Last bowl scored:  Rose Bowl (playoff semifinal) (Georgia vs. Oklahoma)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Winning Jeff 34.0</div>
-<div class="line">2. Trojans 33.75</div>
-<div class="line">3. Tucker 33.25</div>
-<div class="line">4. UrbranLegend 32.75</div>
-<div class="line">5. The Water and The Well 32.25</div>
-<div class="line">6. Clutch City 32.0</div>
-<div class="line">6. The Pick Doctor 32.0</div>
-<div class="line">8. Bevo's Best 31.25</div>
-<div class="line">9. Cowboy 31.0</div>
-<div class="line">10. beach lady 30.75</div>
-<div class="line">11. Bobbo 30.5</div>
-<div class="line">11. Go For Broke 30.5</div>
-<div class="line">13. Coog Crew 29.75</div>
-<div class="line">13. cutie pie 29.75</div>
-<div class="line">13. Jake and the Neverland Pirates 29.75</div>
-<div class="line">16. 4 Rackets 29.25</div>
-<div class="line">16. Godiva Nine! 29.25</div>
-<div class="line">16. Pooh Bear 29.25</div>
-<div class="line">16. Putin's Dog 29.25</div>
-<div class="line">16. Yoda 29.25</div>
-<div class="line">21. I lost the password to my first bracket 29.0</div>
-<div class="line">21. MidWestWheat 29.0</div>
-<div class="line">21. War Eagle 29.0</div>
-<div class="line">24. <strong>Bumblerooski 28.75</strong></div>
-<div class="line">24. <strong>Eclipse 28.75</strong></div>
-<div class="line">26. Bay City Rollers 28.5</div>
-<div class="line">26. Juul 28.5</div>
-<div class="line">26. Rapacke's Bracket 28.5</div>
-<div class="line">26. Superman 28.5</div>
-<div class="line">30. Make Bowl Season Great Again 28.25</div>
-<div class="line">31. Luck be a lady 27.5</div>
-<div class="line">32. Sorbet 27.0</div>
-<div class="line">32. <strong>Static 27.0</strong></div>
-<div class="line">32. Still a Beaver Believer 27.0</div>
-<div class="line">32. <strong>Thunder 27.0</strong></div>
-<div class="line">36. Santa Cruz Bill 26.75</div>
-<div class="line">37. <strong>#MamaBear 26.5</strong></div>
-<div class="line">37. Kevin's bracket 26.5</div>
-<div class="line">39. Katyusha 26.25</div>
-<div class="line">39. <strong>Nerf Herder 26.25</strong></div>
-<div class="line">39. Texas Big Red 26.25</div>
-<div class="line">39. Victorious Secret 26.25</div>
-<div class="line">43. Pepper Bear 26.0</div>
-<div class="line">44. Batman 25.75</div>
-<div class="line">44. Lucky in 2018 25.75</div>
-<div class="line">46. <strong>GlamKam 25.5</strong></div>
-<div class="line">47. Assistant Coach Riley? 25.25</div>
-<div class="line">48. Blindhog2017 25.0</div>
-<div class="line">49. Blind Dog's Bluff 24.75</div>
-<div class="line">49. Escalante 24.75</div>
-<div class="line">49. Go For Bones 24.75</div>
-<div class="line">49. Josh's Bracket 24.75</div>
-<div class="line">53. Brothers before others 24.25</div>
-<div class="line">54. Adrian A 24.0</div>
-<div class="line">54. OSUX3 24.0</div>
-<div class="line">56. Julez 23.75</div>
-<div class="line">56. Santa's Helper 23.75</div>
-<div class="line">56. Sgt. Pepper 23.75</div>
-<div class="line">59. The Striker 23.5</div>
-<div class="line">60. <strong>D-Bo 23.25</strong></div>
-<div class="line">61. YOLO Pups 23.0</div>
-<div class="line">62. War Beaver 22.75</div>
-<div class="line">63. hapagirl 22.25</div>
-<div class="line">63. Nurse Ratched 22.25</div>
-<div class="line">65. Maui Girl 21.75</div>
-<div class="line">66. <strong>Lightning 21.5</strong></div>
-<div class="line">67. Duke Rules 21.25</div>
-<div class="line">68. Warren Mooned Me 21.0</div>
-<div class="line">69. <strong>Em214 20.5</strong></div>
-<div class="line">70. Swampdonkey 20.25</div>
+<div class="line">1. Winning Jeff 37.0</div>
+<div class="line">2. Trojans 36.75</div>
+<div class="line">3. Clutch City 35.0</div>
+<div class="line">3. The Pick Doctor 35.0</div>
+<div class="line">5. Bevo's Best 34.25</div>
+<div class="line">6. beach lady 33.75</div>
+<div class="line">6. UrbranLegend 33.75</div>
+<div class="line">8. The Water and The Well 33.25</div>
+<div class="line">8. Tucker 33.25</div>
+<div class="line">10. Cowboy 33.0</div>
+<div class="line">11. cutie pie 32.75</div>
+<div class="line">12. Rapacke's Bracket 32.5</div>
+<div class="line">13. Putin's Dog 32.25</div>
+<div class="line">14. Go For Broke 31.5</div>
+<div class="line">15. I lost the password to my first bracket 31.0</div>
+<div class="line">16. Coog Crew 30.75</div>
+<div class="line">17. Bay City Rollers 30.5</div>
+<div class="line">17. Bobbo 30.5</div>
+<div class="line">17. Superman 30.5</div>
+<div class="line">20. Make Bowl Season Great Again 30.25</div>
+<div class="line">20. Pooh Bear 30.25</div>
+<div class="line">20. Yoda 30.25</div>
+<div class="line">23. MidWestWheat 30.0</div>
+<div class="line">23. <strong>Thunder 30.0</strong></div>
+<div class="line">23. War Eagle 30.0</div>
+<div class="line">26. <strong>Bumblerooski 29.75</strong></div>
+<div class="line">26. Jake and the Neverland Pirates 29.75</div>
+<div class="line">28. Kevin's bracket 29.5</div>
+<div class="line">28. Luck be a lady 29.5</div>
+<div class="line">30. 4 Rackets 29.25</div>
+<div class="line">30. Assistant Coach Riley? 29.25</div>
+<div class="line">30. Godiva Nine! 29.25</div>
+<div class="line">30. <strong>Nerf Herder 29.25</strong></div>
+<div class="line">30. Texas Big Red 29.25</div>
+<div class="line">30. Victorious Secret 29.25</div>
+<div class="line">36. Sorbet 29.0</div>
+<div class="line">36. <strong>Static 29.0</strong></div>
+<div class="line">38. <strong>Eclipse 28.75</strong></div>
+<div class="line">39. <strong>GlamKam 28.5</strong></div>
+<div class="line">39. Juul 28.5</div>
+<div class="line">41. Katyusha 28.25</div>
+<div class="line">42. Pepper Bear 28.0</div>
+<div class="line">43. Blind Dog's Bluff 27.75</div>
+<div class="line">44. <strong>#MamaBear 27.5</strong></div>
+<div class="line">45. Brothers before others 27.25</div>
+<div class="line">46. Still a Beaver Believer 27.0</div>
+<div class="line">47. Batman 26.75</div>
+<div class="line">47. Go For Bones 26.75</div>
+<div class="line">47. Julez 26.75</div>
+<div class="line">47. Lucky in 2018 26.75</div>
+<div class="line">47. Santa Cruz Bill 26.75</div>
+<div class="line">52. <strong>D-Bo 26.25</strong></div>
+<div class="line">53. Blindhog2017 26.0</div>
+<div class="line">54. Escalante 25.75</div>
+<div class="line">54. Josh's Bracket 25.75</div>
+<div class="line">54. War Beaver 25.75</div>
+<div class="line">57. Santa's Helper 24.75</div>
+<div class="line">58. Adrian A 24.0</div>
+<div class="line">58. OSUX3 24.0</div>
+<div class="line">58. YOLO Pups 24.0</div>
+<div class="line">61. Maui Girl 23.75</div>
+<div class="line">61. Sgt. Pepper 23.75</div>
+<div class="line">63. <strong>Em214 23.5</strong></div>
+<div class="line">63. The Striker 23.5</div>
+<div class="line">65. Swampdonkey 23.25</div>
+<div class="line">66. <strong>Lightning 22.5</strong></div>
+<div class="line">67. hapagirl 22.25</div>
+<div class="line">67. Nurse Ratched 22.25</div>
+<div class="line">69. Warren Mooned Me 22.0</div>
+<div class="line">70. Duke Rules 21.25</div>
 <div class="line">71. West Coast Bias 16.25</div>
 </div>
 </div>
