--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2018-01-01 18:08:43</em></div>
-<div class="line"><em>Last bowl scored:  Citrus Bowl (Lousiana State (LSU) vs. Notre Dame)</em></div>
+<div class="line"><em>Last updated:  2018-01-01 20:50:26</em></div>
+<div class="line"><em>Last bowl scored:  Rose Bowl (playoff semifinal) (Georgia vs. Oklahoma)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Tucker 34.75</div>
-<div class="line">2. Clutch City 33.5</div>
-<div class="line">3. Coog Crew 33.0</div>
-<div class="line">4. Victorious Secret 32.75</div>
-<div class="line">5. UrbranLegend 32.25</div>
-<div class="line">6. Nurse Ratched 32.0</div>
-<div class="line">6. The Striker 32.0</div>
-<div class="line">6. Yoda 32.0</div>
-<div class="line">9. Bevo's Best 31.75</div>
-<div class="line">10. <strong>Thunder 31.25</strong></div>
-<div class="line">11. cutie pie 31.0</div>
-<div class="line">12. beach lady 30.5</div>
-<div class="line">12. Brothers before others 30.5</div>
-<div class="line">12. Godiva Nine! 30.5</div>
-<div class="line">12. Katyusha 30.5</div>
-<div class="line">16. Putin's Dog 30.25</div>
-<div class="line">17. Jake and the Neverland Pirates 30.0</div>
-<div class="line">18. <strong>D-Bo 29.75</strong></div>
-<div class="line">19. <strong>Nerf Herder 29.5</strong></div>
-<div class="line">20. hapagirl 29.25</div>
-<div class="line">21. <strong>Em214 28.75</strong></div>
-<div class="line">21. Josh's Bracket 28.75</div>
-<div class="line">23. Batman 28.25</div>
-<div class="line">23. YOLO Pups 28.25</div>
-<div class="line">25. Superman 28.0</div>
-<div class="line">25. Trojans 28.0</div>
-<div class="line">25. Warren Mooned Me 28.0</div>
-<div class="line">28. Cowboy 27.75</div>
-<div class="line">28. Santa's Helper 27.75</div>
-<div class="line">30. Adrian A 27.25</div>
-<div class="line">30. Blind Dog's Bluff 27.25</div>
-<div class="line">30. Rapacke's Bracket 27.25</div>
-<div class="line">33. Still a Beaver Believer 27.0</div>
-<div class="line">34. 4 Rackets 26.5</div>
-<div class="line">34. Go For Bones 26.5</div>
-<div class="line">34. <strong>Lightning 26.5</strong></div>
-<div class="line">34. Swampdonkey 26.5</div>
-<div class="line">38. Maui Girl 26.25</div>
-<div class="line">38. The Pick Doctor 26.25</div>
-<div class="line">38. War Beaver 26.25</div>
-<div class="line">41. Pooh Bear 26.0</div>
-<div class="line">41. <strong>Static 26.0</strong></div>
-<div class="line">43. Blindhog2017 25.75</div>
-<div class="line">43. Go For Broke 25.75</div>
-<div class="line">45. Lucky in 2018 25.5</div>
-<div class="line">46. Assistant Coach Riley? 25.0</div>
-<div class="line">47. <strong>GlamKam 24.75</strong></div>
-<div class="line">47. Juul 24.75</div>
-<div class="line">47. Make Bowl Season Great Again 24.75</div>
-<div class="line">50. The Water and The Well 24.5</div>
-<div class="line">51. Kevin's bracket 24.25</div>
-<div class="line">51. Santa Cruz Bill 24.25</div>
-<div class="line">53. Pepper Bear 24.0</div>
-<div class="line">54. Bay City Rollers 23.75</div>
-<div class="line">54. Julez 23.75</div>
-<div class="line">54. Sgt. Pepper 23.75</div>
-<div class="line">54. Sorbet 23.75</div>
-<div class="line">54. War Eagle 23.75</div>
-<div class="line">59. <strong>Bumblerooski 23.25</strong></div>
-<div class="line">59. Duke Rules 23.25</div>
-<div class="line">59. I lost the password to my first bracket 23.25</div>
-<div class="line">62. Bobbo 23.0</div>
-<div class="line">63. MidWestWheat 22.75</div>
-<div class="line">64. <strong>Eclipse 22.25</strong></div>
-<div class="line">65. Texas Big Red 21.25</div>
-<div class="line">66. Luck be a lady 20.5</div>
-<div class="line">67. Escalante 19.5</div>
-<div class="line">68. OSUX3 19.25</div>
-<div class="line">69. West Coast Bias 19.0</div>
-<div class="line">70. Winning Jeff 18.25</div>
-<div class="line">71. <strong>#MamaBear -32.25</strong></div>
+<div class="line">1. <strong>#MamaBear 44.75</strong></div>
+<div class="line">2. Tucker 36.75</div>
+<div class="line">3. Coog Crew 36.0</div>
+<div class="line">3. Yoda 36.0</div>
+<div class="line">5. Bevo's Best 34.75</div>
+<div class="line">6. Clutch City 34.5</div>
+<div class="line">7. cutie pie 34.0</div>
+<div class="line">7. The Striker 34.0</div>
+<div class="line">9. Victorious Secret 33.75</div>
+<div class="line">10. beach lady 33.5</div>
+<div class="line">11. UrbranLegend 33.25</div>
+<div class="line">12. <strong>D-Bo 32.75</strong></div>
+<div class="line">13. <strong>Nerf Herder 32.5</strong></div>
+<div class="line">14. <strong>Thunder 32.25</strong></div>
+<div class="line">15. Jake and the Neverland Pirates 32.0</div>
+<div class="line">15. Nurse Ratched 32.0</div>
+<div class="line">17. Brothers before others 31.5</div>
+<div class="line">18. Batman 31.25</div>
+<div class="line">18. Putin's Dog 31.25</div>
+<div class="line">18. Rapacke's Bracket 31.25</div>
+<div class="line">21. Trojans 31.0</div>
+<div class="line">22. Godiva Nine! 30.5</div>
+<div class="line">22. Katyusha 30.5</div>
+<div class="line">24. Blind Dog's Bluff 30.25</div>
+<div class="line">25. Blindhog2017 29.75</div>
+<div class="line">25. <strong>Em214 29.75</strong></div>
+<div class="line">25. Josh's Bracket 29.75</div>
+<div class="line">28. <strong>Lightning 29.5</strong></div>
+<div class="line">28. Swampdonkey 29.5</div>
+<div class="line">30. hapagirl 29.25</div>
+<div class="line">30. The Pick Doctor 29.25</div>
+<div class="line">30. War Beaver 29.25</div>
+<div class="line">30. YOLO Pups 29.25</div>
+<div class="line">34. Pooh Bear 29.0</div>
+<div class="line">34. Still a Beaver Believer 29.0</div>
+<div class="line">34. Warren Mooned Me 29.0</div>
+<div class="line">37. Go For Broke 28.75</div>
+<div class="line">37. Santa's Helper 28.75</div>
+<div class="line">39. Go For Bones 28.5</div>
+<div class="line">39. Lucky in 2018 28.5</div>
+<div class="line">41. Maui Girl 28.25</div>
+<div class="line">42. <strong>Static 28.0</strong></div>
+<div class="line">42. Superman 28.0</div>
+<div class="line">44. Cowboy 27.75</div>
+<div class="line">45. Adrian A 27.25</div>
+<div class="line">45. Kevin's bracket 27.25</div>
+<div class="line">47. Juul 26.75</div>
+<div class="line">47. War Eagle 26.75</div>
+<div class="line">49. 4 Rackets 26.5</div>
+<div class="line">50. <strong>Bumblerooski 26.25</strong></div>
+<div class="line">50. Santa Cruz Bill 26.25</div>
+<div class="line">52. Assistant Coach Riley? 26.0</div>
+<div class="line">53. <strong>GlamKam 25.75</strong></div>
+<div class="line">53. MidWestWheat 25.75</div>
+<div class="line">55. The Water and The Well 25.5</div>
+<div class="line">56. Duke Rules 25.25</div>
+<div class="line">57. Julez 24.75</div>
+<div class="line">57. Make Bowl Season Great Again 24.75</div>
+<div class="line">59. Texas Big Red 24.25</div>
+<div class="line">60. Pepper Bear 24.0</div>
+<div class="line">61. Bay City Rollers 23.75</div>
+<div class="line">61. Sgt. Pepper 23.75</div>
+<div class="line">61. Sorbet 23.75</div>
+<div class="line">64. I lost the password to my first bracket 23.25</div>
+<div class="line">65. Bobbo 23.0</div>
+<div class="line">66. Escalante 22.5</div>
+<div class="line">67. <strong>Eclipse 22.25</strong></div>
+<div class="line">68. Luck be a lady 20.5</div>
+<div class="line">69. OSUX3 19.25</div>
+<div class="line">69. Winning Jeff 19.25</div>
+<div class="line">71. West Coast Bias 19.0</div>
 </div>
 </div>
 </body>
