--- a/bowl_pool/test/2017-2018/results.html
+++ b/bowl_pool/test/2017-2018/results.html
@@ -3371,6 +3371,83 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 </tr>
+<tr><td>38</td>
+<td>Rose Bowl (playoff semifinal)</td>
+<td>Georgia</td>
+<td>Oklahoma</td>
+<td>2.0</td>
+<td>76.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Will South Carolina recover a Michigan fumble  in the Outback bowl?</td>
 <td>&nbsp;</td>
@@ -3602,82 +3679,159 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B6</td>
+<td>Will Baker Mayfield have more than 325 yards passing against Georgia?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>-32.25</strong></td>
+<td><strong>44.75</strong></td>
 <td><strong>26.5</strong></td>
 <td><strong>27.25</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>28.25</strong></td>
+<td><strong>26.0</strong></td>
+<td><strong>31.25</strong></td>
 <td><strong>23.75</strong></td>
-<td><strong>30.5</strong></td>
-<td><strong>31.75</strong></td>
-<td><strong>27.25</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>30.5</strong></td>
-<td><strong>23.25</strong></td>
 <td><strong>33.5</strong></td>
-<td><strong>33.0</strong></td>
-<td><strong>27.75</strong></td>
-<td><strong>31.0</strong></td>
+<td><strong>34.75</strong></td>
+<td><strong>30.25</strong></td>
 <td><strong>29.75</strong></td>
-<td><strong>23.25</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>34.5</strong></td>
+<td><strong>36.0</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>34.0</strong></td>
+<td><strong>32.75</strong></td>
+<td><strong>25.25</strong></td>
 <td><strong>22.25</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>26.5</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>22.5</strong></td>
 <td><strong>25.75</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>30.5</strong></td>
 <td><strong>29.25</strong></td>
 <td><strong>23.25</strong></td>
-<td><strong>30.0</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>23.75</strong></td>
+<td><strong>32.0</strong></td>
+<td><strong>29.75</strong></td>
 <td><strong>24.75</strong></td>
+<td><strong>26.75</strong></td>
 <td><strong>30.5</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>26.5</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>29.5</strong></td>
 <td><strong>20.5</strong></td>
-<td><strong>25.5</strong></td>
+<td><strong>28.5</strong></td>
 <td><strong>24.75</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>22.75</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>25.75</strong></td>
 <td><strong>32.0</strong></td>
 <td><strong>19.25</strong></td>
 <td><strong>24.0</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>30.25</strong></td>
-<td><strong>27.25</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>32.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>28.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>28.0</strong></td>
 <td><strong>29.5</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>27.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>28.0</strong></td>
-<td><strong>26.5</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>32.0</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>31.25</strong></td>
-<td><strong>28.0</strong></td>
-<td><strong>34.75</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>34.0</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>32.25</strong></td>
-<td><strong>32.75</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>28.0</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>36.75</strong></td>
+<td><strong>33.25</strong></td>
+<td><strong>33.75</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>29.0</strong></td>
 <td><strong>19.0</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>32.0</strong></td>
-<td><strong>28.25</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>36.0</strong></td>
+<td><strong>29.25</strong></td>
 </tr>
 </tbody>
 </table>
