Rose Bowl update

--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2018-01-01 20:50:26</em></div>
-<div class="line"><em>Last bowl scored:  Rose Bowl (playoff semifinal) (Georgia vs. Oklahoma)</em></div>
+<div class="line"><em>Last updated:  2018-01-02 00:12:23</em></div>
+<div class="line"><em>Last bowl scored:  Sugar Bowl (playoff semifinal) (Alabama vs. Clemson)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>#MamaBear 44.75</strong></div>
-<div class="line">2. Tucker 36.75</div>
-<div class="line">3. Coog Crew 36.0</div>
-<div class="line">3. Yoda 36.0</div>
-<div class="line">5. Bevo's Best 34.75</div>
-<div class="line">6. Clutch City 34.5</div>
-<div class="line">7. cutie pie 34.0</div>
-<div class="line">7. The Striker 34.0</div>
-<div class="line">9. Victorious Secret 33.75</div>
-<div class="line">10. beach lady 33.5</div>
-<div class="line">11. UrbranLegend 33.25</div>
-<div class="line">12. <strong>D-Bo 32.75</strong></div>
-<div class="line">13. <strong>Nerf Herder 32.5</strong></div>
-<div class="line">14. <strong>Thunder 32.25</strong></div>
-<div class="line">15. Jake and the Neverland Pirates 32.0</div>
-<div class="line">15. Nurse Ratched 32.0</div>
-<div class="line">17. Brothers before others 31.5</div>
-<div class="line">18. Batman 31.25</div>
-<div class="line">18. Putin's Dog 31.25</div>
-<div class="line">18. Rapacke's Bracket 31.25</div>
-<div class="line">21. Trojans 31.0</div>
-<div class="line">22. Godiva Nine! 30.5</div>
-<div class="line">22. Katyusha 30.5</div>
-<div class="line">24. Blind Dog's Bluff 30.25</div>
-<div class="line">25. Blindhog2017 29.75</div>
-<div class="line">25. <strong>Em214 29.75</strong></div>
-<div class="line">25. Josh's Bracket 29.75</div>
-<div class="line">28. <strong>Lightning 29.5</strong></div>
-<div class="line">28. Swampdonkey 29.5</div>
-<div class="line">30. hapagirl 29.25</div>
-<div class="line">30. The Pick Doctor 29.25</div>
-<div class="line">30. War Beaver 29.25</div>
-<div class="line">30. YOLO Pups 29.25</div>
-<div class="line">34. Pooh Bear 29.0</div>
-<div class="line">34. Still a Beaver Believer 29.0</div>
-<div class="line">34. Warren Mooned Me 29.0</div>
-<div class="line">37. Go For Broke 28.75</div>
-<div class="line">37. Santa's Helper 28.75</div>
-<div class="line">39. Go For Bones 28.5</div>
-<div class="line">39. Lucky in 2018 28.5</div>
-<div class="line">41. Maui Girl 28.25</div>
-<div class="line">42. <strong>Static 28.0</strong></div>
-<div class="line">42. Superman 28.0</div>
-<div class="line">44. Cowboy 27.75</div>
-<div class="line">45. Adrian A 27.25</div>
-<div class="line">45. Kevin's bracket 27.25</div>
-<div class="line">47. Juul 26.75</div>
-<div class="line">47. War Eagle 26.75</div>
-<div class="line">49. 4 Rackets 26.5</div>
-<div class="line">50. <strong>Bumblerooski 26.25</strong></div>
-<div class="line">50. Santa Cruz Bill 26.25</div>
-<div class="line">52. Assistant Coach Riley? 26.0</div>
-<div class="line">53. <strong>GlamKam 25.75</strong></div>
-<div class="line">53. MidWestWheat 25.75</div>
-<div class="line">55. The Water and The Well 25.5</div>
-<div class="line">56. Duke Rules 25.25</div>
-<div class="line">57. Julez 24.75</div>
-<div class="line">57. Make Bowl Season Great Again 24.75</div>
-<div class="line">59. Texas Big Red 24.25</div>
-<div class="line">60. Pepper Bear 24.0</div>
-<div class="line">61. Bay City Rollers 23.75</div>
-<div class="line">61. Sgt. Pepper 23.75</div>
-<div class="line">61. Sorbet 23.75</div>
-<div class="line">64. I lost the password to my first bracket 23.25</div>
-<div class="line">65. Bobbo 23.0</div>
-<div class="line">66. Escalante 22.5</div>
+<div class="line">1. <strong>#MamaBear 122.75</strong></div>
+<div class="line">2. Yoda 40.0</div>
+<div class="line">3. Tucker 38.75</div>
+<div class="line">4. cutie pie 37.0</div>
+<div class="line">5. Clutch City 36.5</div>
+<div class="line">6. Coog Crew 36.0</div>
+<div class="line">7. Bevo's Best 35.75</div>
+<div class="line">8. beach lady 35.5</div>
+<div class="line">8. <strong>Nerf Herder 35.5</strong></div>
+<div class="line">10. <strong>Thunder 35.25</strong></div>
+<div class="line">11. Jake and the Neverland Pirates 35.0</div>
+<div class="line">11. The Striker 35.0</div>
+<div class="line">13. Victorious Secret 34.75</div>
+<div class="line">14. Brothers before others 34.5</div>
+<div class="line">15. Batman 34.25</div>
+<div class="line">15. Rapacke's Bracket 34.25</div>
+<div class="line">15. UrbranLegend 34.25</div>
+<div class="line">18. Trojans 34.0</div>
+<div class="line">19. Katyusha 33.5</div>
+<div class="line">20. Blindhog2017 32.75</div>
+<div class="line">20. <strong>D-Bo 32.75</strong></div>
+<div class="line">20. <strong>Em214 32.75</strong></div>
+<div class="line">23. Swampdonkey 32.5</div>
+<div class="line">24. Blind Dog's Bluff 32.25</div>
+<div class="line">24. Putin's Dog 32.25</div>
+<div class="line">26. Nurse Ratched 32.0</div>
+<div class="line">26. Pooh Bear 32.0</div>
+<div class="line">28. Josh's Bracket 31.75</div>
+<div class="line">29. Maui Girl 31.25</div>
+<div class="line">30. <strong>Static 31.0</strong></div>
+<div class="line">30. Still a Beaver Believer 31.0</div>
+<div class="line">30. Warren Mooned Me 31.0</div>
+<div class="line">33. Go For Broke 30.75</div>
+<div class="line">34. Godiva Nine! 30.5</div>
+<div class="line">34. <strong>Lightning 30.5</strong></div>
+<div class="line">34. Lucky in 2018 30.5</div>
+<div class="line">37. War Beaver 30.25</div>
+<div class="line">38. Cowboy 29.75</div>
+<div class="line">38. Juul 29.75</div>
+<div class="line">38. Santa's Helper 29.75</div>
+<div class="line">41. <strong>Bumblerooski 29.25</strong></div>
+<div class="line">41. hapagirl 29.25</div>
+<div class="line">41. Kevin's bracket 29.25</div>
+<div class="line">41. Santa Cruz Bill 29.25</div>
+<div class="line">41. The Pick Doctor 29.25</div>
+<div class="line">41. YOLO Pups 29.25</div>
+<div class="line">47. Assistant Coach Riley? 29.0</div>
+<div class="line">47. Superman 29.0</div>
+<div class="line">49. Julez 28.75</div>
+<div class="line">49. MidWestWheat 28.75</div>
+<div class="line">51. Go For Bones 28.5</div>
+<div class="line">51. The Water and The Well 28.5</div>
+<div class="line">53. <strong>GlamKam 27.75</strong></div>
+<div class="line">53. War Eagle 27.75</div>
+<div class="line">55. 4 Rackets 27.5</div>
+<div class="line">56. Adrian A 27.25</div>
+<div class="line">57. Duke Rules 26.25</div>
+<div class="line">57. Texas Big Red 26.25</div>
+<div class="line">59. Make Bowl Season Great Again 25.75</div>
+<div class="line">59. Sorbet 25.75</div>
+<div class="line">61. Escalante 25.5</div>
+<div class="line">62. Bobbo 25.0</div>
+<div class="line">62. Pepper Bear 25.0</div>
+<div class="line">64. I lost the password to my first bracket 24.25</div>
+<div class="line">65. Bay City Rollers 23.75</div>
+<div class="line">65. Sgt. Pepper 23.75</div>
 <div class="line">67. <strong>Eclipse 22.25</strong></div>
-<div class="line">68. Luck be a lady 20.5</div>
-<div class="line">69. OSUX3 19.25</div>
-<div class="line">69. Winning Jeff 19.25</div>
-<div class="line">71. West Coast Bias 19.0</div>
+<div class="line">68. OSUX3 21.25</div>
+<div class="line">69. West Coast Bias 21.0</div>
+<div class="line">70. Luck be a lady 20.5</div>
+<div class="line">71. Winning Jeff 19.25</div>
 </div>
 </div>
 </body>
