--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,80 +364,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2018-01-01 20:50:28</em></div>
-<div class="line"><em>Last bowl scored:  Rose Bowl (playoff semifinal) (Georgia vs. Oklahoma)</em></div>
+<div class="line"><em>Last updated:  2018-01-02 00:12:25</em></div>
+<div class="line"><em>Last bowl scored:  Sugar Bowl (playoff semifinal) (Alabama vs. Clemson)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Winning Jeff 37.0</div>
-<div class="line">2. Trojans 36.75</div>
-<div class="line">3. Clutch City 35.0</div>
-<div class="line">3. The Pick Doctor 35.0</div>
-<div class="line">5. Bevo's Best 34.25</div>
-<div class="line">6. beach lady 33.75</div>
-<div class="line">6. UrbranLegend 33.75</div>
-<div class="line">8. The Water and The Well 33.25</div>
-<div class="line">8. Tucker 33.25</div>
-<div class="line">10. Cowboy 33.0</div>
-<div class="line">11. cutie pie 32.75</div>
-<div class="line">12. Rapacke's Bracket 32.5</div>
-<div class="line">13. Putin's Dog 32.25</div>
-<div class="line">14. Go For Broke 31.5</div>
-<div class="line">15. I lost the password to my first bracket 31.0</div>
-<div class="line">16. Coog Crew 30.75</div>
-<div class="line">17. Bay City Rollers 30.5</div>
-<div class="line">17. Bobbo 30.5</div>
-<div class="line">17. Superman 30.5</div>
-<div class="line">20. Make Bowl Season Great Again 30.25</div>
-<div class="line">20. Pooh Bear 30.25</div>
-<div class="line">20. Yoda 30.25</div>
-<div class="line">23. MidWestWheat 30.0</div>
-<div class="line">23. <strong>Thunder 30.0</strong></div>
-<div class="line">23. War Eagle 30.0</div>
-<div class="line">26. <strong>Bumblerooski 29.75</strong></div>
-<div class="line">26. Jake and the Neverland Pirates 29.75</div>
-<div class="line">28. Kevin's bracket 29.5</div>
-<div class="line">28. Luck be a lady 29.5</div>
-<div class="line">30. 4 Rackets 29.25</div>
-<div class="line">30. Assistant Coach Riley? 29.25</div>
-<div class="line">30. Godiva Nine! 29.25</div>
-<div class="line">30. <strong>Nerf Herder 29.25</strong></div>
-<div class="line">30. Texas Big Red 29.25</div>
-<div class="line">30. Victorious Secret 29.25</div>
-<div class="line">36. Sorbet 29.0</div>
-<div class="line">36. <strong>Static 29.0</strong></div>
-<div class="line">38. <strong>Eclipse 28.75</strong></div>
-<div class="line">39. <strong>GlamKam 28.5</strong></div>
-<div class="line">39. Juul 28.5</div>
-<div class="line">41. Katyusha 28.25</div>
-<div class="line">42. Pepper Bear 28.0</div>
-<div class="line">43. Blind Dog's Bluff 27.75</div>
-<div class="line">44. <strong>#MamaBear 27.5</strong></div>
-<div class="line">45. Brothers before others 27.25</div>
-<div class="line">46. Still a Beaver Believer 27.0</div>
-<div class="line">47. Batman 26.75</div>
-<div class="line">47. Go For Bones 26.75</div>
-<div class="line">47. Julez 26.75</div>
-<div class="line">47. Lucky in 2018 26.75</div>
-<div class="line">47. Santa Cruz Bill 26.75</div>
-<div class="line">52. <strong>D-Bo 26.25</strong></div>
-<div class="line">53. Blindhog2017 26.0</div>
-<div class="line">54. Escalante 25.75</div>
-<div class="line">54. Josh's Bracket 25.75</div>
-<div class="line">54. War Beaver 25.75</div>
-<div class="line">57. Santa's Helper 24.75</div>
-<div class="line">58. Adrian A 24.0</div>
-<div class="line">58. OSUX3 24.0</div>
-<div class="line">58. YOLO Pups 24.0</div>
-<div class="line">61. Maui Girl 23.75</div>
-<div class="line">61. Sgt. Pepper 23.75</div>
-<div class="line">63. <strong>Em214 23.5</strong></div>
-<div class="line">63. The Striker 23.5</div>
-<div class="line">65. Swampdonkey 23.25</div>
-<div class="line">66. <strong>Lightning 22.5</strong></div>
-<div class="line">67. hapagirl 22.25</div>
-<div class="line">67. Nurse Ratched 22.25</div>
-<div class="line">69. Warren Mooned Me 22.0</div>
-<div class="line">70. Duke Rules 21.25</div>
+<div class="line">1. Trojans 39.75</div>
+<div class="line">2. Winning Jeff 39.0</div>
+<div class="line">3. Bevo's Best 37.25</div>
+<div class="line">4. The Water and The Well 36.25</div>
+<div class="line">5. Rapacke's Bracket 35.5</div>
+<div class="line">6. Putin's Dog 35.25</div>
+<div class="line">7. Clutch City 35.0</div>
+<div class="line">7. Cowboy 35.0</div>
+<div class="line">7. The Pick Doctor 35.0</div>
+<div class="line">10. UrbranLegend 34.75</div>
+<div class="line">11. I lost the password to my first bracket 34.0</div>
+<div class="line">12. beach lady 33.75</div>
+<div class="line">12. cutie pie 33.75</div>
+<div class="line">14. Superman 33.5</div>
+<div class="line">15. Make Bowl Season Great Again 33.25</div>
+<div class="line">15. Tucker 33.25</div>
+<div class="line">17. <strong>Thunder 33.0</strong></div>
+<div class="line">17. War Eagle 33.0</div>
+<div class="line">19. <strong>Bumblerooski 32.75</strong></div>
+<div class="line">19. Coog Crew 32.75</div>
+<div class="line">19. Jake and the Neverland Pirates 32.75</div>
+<div class="line">22. Bay City Rollers 32.5</div>
+<div class="line">22. Bobbo 32.5</div>
+<div class="line">24. Assistant Coach Riley? 32.25</div>
+<div class="line">24. <strong>Nerf Herder 32.25</strong></div>
+<div class="line">26. Pepper Bear 32.0</div>
+<div class="line">26. <strong>Static 32.0</strong></div>
+<div class="line">28. Go For Broke 31.5</div>
+<div class="line">28. Juul 31.5</div>
+<div class="line">28. Luck be a lady 31.5</div>
+<div class="line">31. Katyusha 31.25</div>
+<div class="line">31. Pooh Bear 31.25</div>
+<div class="line">31. Yoda 31.25</div>
+<div class="line">34. MidWestWheat 31.0</div>
+<div class="line">34. Sorbet 31.0</div>
+<div class="line">36. <strong>Eclipse 30.75</strong></div>
+<div class="line">36. Julez 30.75</div>
+<div class="line">38. 4 Rackets 30.25</div>
+<div class="line">38. Brothers before others 30.25</div>
+<div class="line">38. Victorious Secret 30.25</div>
+<div class="line">41. Blind Dog's Bluff 29.75</div>
+<div class="line">42. Kevin's bracket 29.5</div>
+<div class="line">43. Godiva Nine! 29.25</div>
+<div class="line">43. Texas Big Red 29.25</div>
+<div class="line">45. Blindhog2017 29.0</div>
+<div class="line">46. Escalante 28.75</div>
+<div class="line">46. Go For Bones 28.75</div>
+<div class="line">48. <strong>GlamKam 28.5</strong></div>
+<div class="line">49. Batman 27.75</div>
+<div class="line">49. Josh's Bracket 27.75</div>
+<div class="line">49. Santa Cruz Bill 27.75</div>
+<div class="line">52. <strong>#MamaBear 27.5</strong></div>
+<div class="line">53. Still a Beaver Believer 27.0</div>
+<div class="line">53. YOLO Pups 27.0</div>
+<div class="line">55. Lucky in 2018 26.75</div>
+<div class="line">55. Maui Girl 26.75</div>
+<div class="line">55. Sgt. Pepper 26.75</div>
+<div class="line">55. War Beaver 26.75</div>
+<div class="line">59. <strong>Em214 26.5</strong></div>
+<div class="line">59. The Striker 26.5</div>
+<div class="line">61. <strong>D-Bo 26.25</strong></div>
+<div class="line">61. Swampdonkey 26.25</div>
+<div class="line">63. Adrian A 26.0</div>
+<div class="line">64. Santa's Helper 25.75</div>
+<div class="line">65. Nurse Ratched 24.25</div>
+<div class="line">66. OSUX3 24.0</div>
+<div class="line">66. Warren Mooned Me 24.0</div>
+<div class="line">68. <strong>Lightning 23.5</strong></div>
+<div class="line">69. Duke Rules 22.25</div>
+<div class="line">69. hapagirl 22.25</div>
 <div class="line">71. West Coast Bias 16.25</div>
 </div>
 </div>
