--- a/bowl_pool/test/2017-2018/results.html
+++ b/bowl_pool/test/2017-2018/results.html
@@ -3448,6 +3448,83 @@ ul.auto-toc {
 <td>3.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>39</td>
+<td>Sugar Bowl (playoff semifinal)</td>
+<td>Alabama</td>
+<td>Clemson</td>
+<td>2.5</td>
+<td>78.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Will South Carolina recover a Michigan fumble  in the Outback bowl?</td>
 <td>&nbsp;</td>
@@ -3679,6 +3756,83 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B5</td>
+<td>Will Clemson gain 345 yards of offense against Alabama?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B6</td>
 <td>Will Baker Mayfield have more than 325 yards passing against Georgia?</td>
 <td>&nbsp;</td>
@@ -3761,76 +3915,76 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>44.75</strong></td>
-<td><strong>26.5</strong></td>
+<td><strong>122.75</strong></td>
+<td><strong>27.5</strong></td>
 <td><strong>27.25</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>31.25</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>34.25</strong></td>
 <td><strong>23.75</strong></td>
-<td><strong>33.5</strong></td>
-<td><strong>34.75</strong></td>
-<td><strong>30.25</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>31.5</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>34.5</strong></td>
-<td><strong>36.0</strong></td>
-<td><strong>27.75</strong></td>
-<td><strong>34.0</strong></td>
+<td><strong>35.5</strong></td>
+<td><strong>35.75</strong></td>
+<td><strong>32.25</strong></td>
 <td><strong>32.75</strong></td>
-<td><strong>25.25</strong></td>
-<td><strong>22.25</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>34.5</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>36.5</strong></td>
+<td><strong>36.0</strong></td>
 <td><strong>29.75</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>25.75</strong></td>
+<td><strong>37.0</strong></td>
+<td><strong>32.75</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>32.75</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>27.75</strong></td>
 <td><strong>28.5</strong></td>
-<td><strong>28.75</strong></td>
+<td><strong>30.75</strong></td>
 <td><strong>30.5</strong></td>
 <td><strong>29.25</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>32.0</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>35.0</strong></td>
+<td><strong>31.75</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>29.75</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>26.75</strong></td>
+<td><strong>33.5</strong></td>
+<td><strong>29.25</strong></td>
 <td><strong>30.5</strong></td>
-<td><strong>27.25</strong></td>
-<td><strong>29.5</strong></td>
 <td><strong>20.5</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>28.25</strong></td>
+<td><strong>30.5</strong></td>
 <td><strong>25.75</strong></td>
+<td><strong>31.25</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>32.0</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>24.0</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>32.0</strong></td>
+<td><strong>32.25</strong></td>
+<td><strong>34.25</strong></td>
+<td><strong>35.5</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>31.0</strong></td>
 <td><strong>29.0</strong></td>
-<td><strong>31.25</strong></td>
-<td><strong>31.25</strong></td>
 <td><strong>32.5</strong></td>
 <td><strong>26.25</strong></td>
-<td><strong>28.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>28.0</strong></td>
-<td><strong>29.0</strong></td>
-<td><strong>28.0</strong></td>
-<td><strong>29.5</strong></td>
-<td><strong>24.25</strong></td>
 <td><strong>29.25</strong></td>
+<td><strong>35.0</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>35.25</strong></td>
 <td><strong>34.0</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>32.25</strong></td>
+<td><strong>38.75</strong></td>
+<td><strong>34.25</strong></td>
+<td><strong>34.75</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>27.75</strong></td>
 <td><strong>31.0</strong></td>
-<td><strong>36.75</strong></td>
-<td><strong>33.25</strong></td>
-<td><strong>33.75</strong></td>
-<td><strong>29.25</strong></td>
-<td><strong>26.75</strong></td>
-<td><strong>29.0</strong></td>
-<td><strong>19.0</strong></td>
+<td><strong>21.0</strong></td>
 <td><strong>19.25</strong></td>
-<td><strong>36.0</strong></td>
+<td><strong>40.0</strong></td>
 <td><strong>29.25</strong></td>
 </tr>
 </tbody>
