--- a/bowl_pool/test/2017-2018/results.html
+++ b/bowl_pool/test/2017-2018/results.html
@@ -3525,6 +3525,83 @@ ul.auto-toc {
 <td>3.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>B1</td>
+<td>Who will win the National Championship game (2pts)?</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Will South Carolina recover a Michigan fumble  in the Outback bowl?</td>
 <td>&nbsp;</td>
@@ -3917,65 +3994,65 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td><strong>122.75</strong></td>
 <td><strong>27.5</strong></td>
-<td><strong>27.25</strong></td>
+<td><strong>29.25</strong></td>
 <td><strong>29.0</strong></td>
 <td><strong>34.25</strong></td>
-<td><strong>23.75</strong></td>
+<td><strong>25.75</strong></td>
 <td><strong>35.5</strong></td>
-<td><strong>35.75</strong></td>
+<td><strong>37.75</strong></td>
 <td><strong>32.25</strong></td>
 <td><strong>32.75</strong></td>
 <td><strong>25.0</strong></td>
-<td><strong>34.5</strong></td>
+<td><strong>36.5</strong></td>
 <td><strong>29.25</strong></td>
 <td><strong>36.5</strong></td>
-<td><strong>36.0</strong></td>
-<td><strong>29.75</strong></td>
+<td><strong>38.0</strong></td>
+<td><strong>31.75</strong></td>
 <td><strong>37.0</strong></td>
 <td><strong>32.75</strong></td>
-<td><strong>26.25</strong></td>
+<td><strong>28.25</strong></td>
 <td><strong>22.25</strong></td>
-<td><strong>32.75</strong></td>
+<td><strong>34.75</strong></td>
 <td><strong>25.5</strong></td>
 <td><strong>27.75</strong></td>
-<td><strong>28.5</strong></td>
+<td><strong>30.5</strong></td>
 <td><strong>30.75</strong></td>
 <td><strong>30.5</strong></td>
 <td><strong>29.25</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>35.0</strong></td>
-<td><strong>31.75</strong></td>
-<td><strong>28.75</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>37.0</strong></td>
+<td><strong>33.75</strong></td>
+<td><strong>30.75</strong></td>
 <td><strong>29.75</strong></td>
-<td><strong>33.5</strong></td>
+<td><strong>35.5</strong></td>
 <td><strong>29.25</strong></td>
-<td><strong>30.5</strong></td>
+<td><strong>32.5</strong></td>
 <td><strong>20.5</strong></td>
 <td><strong>30.5</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>31.25</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>33.25</strong></td>
 <td><strong>28.75</strong></td>
-<td><strong>32.0</strong></td>
+<td><strong>34.0</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>25.0</strong></td>
+<td><strong>27.0</strong></td>
 <td><strong>32.0</strong></td>
-<td><strong>32.25</strong></td>
+<td><strong>34.25</strong></td>
 <td><strong>34.25</strong></td>
 <td><strong>35.5</strong></td>
 <td><strong>29.25</strong></td>
 <td><strong>29.75</strong></td>
-<td><strong>23.75</strong></td>
+<td><strong>25.75</strong></td>
 <td><strong>25.75</strong></td>
 <td><strong>31.0</strong></td>
 <td><strong>31.0</strong></td>
-<td><strong>29.0</strong></td>
+<td><strong>31.0</strong></td>
 <td><strong>32.5</strong></td>
 <td><strong>26.25</strong></td>
 <td><strong>29.25</strong></td>
-<td><strong>35.0</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>35.25</strong></td>
-<td><strong>34.0</strong></td>
+<td><strong>37.0</strong></td>
+<td><strong>30.5</strong></td>
+<td><strong>37.25</strong></td>
+<td><strong>36.0</strong></td>
 <td><strong>38.75</strong></td>
 <td><strong>34.25</strong></td>
 <td><strong>34.75</strong></td>
@@ -3985,7 +4062,7 @@ ul.auto-toc {
 <td><strong>21.0</strong></td>
 <td><strong>19.25</strong></td>
 <td><strong>40.0</strong></td>
-<td><strong>29.25</strong></td>
+<td><strong>31.25</strong></td>
 </tr>
 </tbody>
 </table>
